fix: .menu overflow-y
(cherry picked from commit e7308236d9ee74b01c9e1f5d059569a14f3d04b8)

--- a/09_const-var-scope/css/components/menu.css
+++ b/09_const-var-scope/css/components/menu.css
@@ -1,5 +1,7 @@
 .menu {
   display: flex;
+  overflow-y: scroll;
+  max-height: calc(100vh - (var(--basic-indent) * 2));
   padding: 16px;
   border-radius: var(--border-radius);
   flex-direction: column;
